# custom-llm-builder

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_test_chunking.ipynb  02_test_llm_client.ipynb  03_test_dataset_generator.ipynb
src/llm_platform/: config.py
src/llm_platform/data_foundry/: dataset_generator.py  document_processor.py  llm_client.py  schemas.py
