[project]
name = "custom-llm-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]
